--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "2.15",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "pusher/pusher-php-server": "^7.2",
         "yoeunes/toastr": "^3.1"
     },
     "require-dev": {
